# Fundamental-Ava

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  hardhat.config.ts  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish-package.yml
abis/: AlloyIndex.json
benchmarks/: bench_memory_retrieval.py  bench_tick_throughput.py
contracts/: AlloyIndex.sol  AlloyKeeper.sol  AlloyLaunchpad.sol  AlloyMeme.sol
contracts/interfaces/: IAlloyMeme.sol
contracts/libraries/: DistributionMath.sol
docs/: integration.md  mechanism.md  security.md
experiments/: role_emergence_experiment.py
scripts/: deploy.ts  keeper.ts  stats.ts
src/ava/: __init__.py
src/ava/agents/: __init__.py  base.py  cognitive.py  memory.py  social.py
src/ava/analysis/: __init__.py  emergence.py
src/ava/civilization/: __init__.py  culture.py  governance.py  simulation.py
src/ava/communication/: __init__.py  consensus.py  protocol.py
src/ava/execution/: __init__.py  engine.py  tracer.py
src/ava/models/: __init__.py  llm.py
src/ava/utils/: __init__.py  ids.py  timing.py
test/: AlloyKeeper.test.ts  AlloyLaunchpad.test.ts  AlloyMeme.test.ts  DistributionMath.test.ts
tests/: conftest.py  test_agent_lifecycle.py  test_analysis.py  test_civilization.py  test_communication.py  test_memory.py
