[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ava"
version = "0.4.0"
description = "Many-agent simulation framework for digital intelligence development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Fundamental Research Labs" }]
keywords = [
    "multi-agent-systems",
    "agentic-reasoning",
    "simulation",
    "emergent-behavior",
    "cognitive-architecture",
    "digital-humans",
]
