[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ava"
version = "0.4.0"
description = "Many-agent simulation framework for digital intelligence development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Fundamental Research Labs" }]
keywords = [
    "multi-agent-systems",
    "agentic-reasoning",
    "simulation",
    "emergent-behavior",
    "cognitive-architecture",
    "digital-humans",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "networkx>=3.3",
    "anyio>=4.4",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",
    "tiktoken>=0.7",
    "scipy>=1.13",
    "uvloop>=0.19; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.103",
]
viz = ["matplotlib>=3.9", "plotly>=5.22", "pyvis>=0.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/ava"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
